--- a/Packages_and_Notations/myNotation.tex
+++ b/Packages_and_Notations/myNotation.tex
@@ -14,10 +14,13 @@
 \newenvironment{proof}
     {\hspace*{0.5em}\textbf{pf:} \begin{quote}}
     {\end{quote}}
-\newtheorem{thm}{Thm}[section]
+\newtheorem{theorem}{Thm}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{def}{Def.}[section]
+\newtheorem{definition}{Def.}[section]
+\newtheorem{example}{E.X.}{section}
+
+
  
 
 
