--- a/Packages_and_Notations/preamble.tex
+++ b/Packages_and_Notations/preamble.tex
@@ -12,6 +12,13 @@
 \usepackage[charter,cal=cmcal]{mathdesign} %different font
 %\usepackage{avant}
 
+% for emphasize
+\usepackage{ulem}
+
+% for dash box
+\usepackage{adjustbox}
+\usepackage{dashbox}
+
 \usepackage{microtype}
 \usepackage{mathtools}
 \usepackage{etoolbox}
