--- a/Packages_and_Notations/myNotation.tex
+++ b/Packages_and_Notations/myNotation.tex
@@ -22,9 +22,7 @@
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{definition}{Def.}[section]
-\newtheorem{example}{E.X.}{section}
-
- 
+\newtheorem{example}{E.X.}[section]
 
 
 %% Linear algebra notations
