--- a/Mathematics/Calculus_and_Analysis/Real_Analysis_1.tex
+++ b/Mathematics/Calculus_and_Analysis/Real_Analysis_1.tex
@@ -100,7 +100,7 @@ Then, $||a|-|b|| \leq |a-b|$.
     $\lim_{n\to\infty} x_n = \lim_{n\to\infty} z_n = l \Rightarrow \lim_{n\to\infty} y_n = l$.
 \end{theorem}
 \begin{proof}
-    (\uline{Order limit theorem} cannot be used since "$\lim_{n\to\infty} y_n$ exists" is unknown.)
+    (\uline{Order limit theorem} cannot be used since whether $\lim_{n\to\infty} y_n$ exists is unknown.)
     Let $\epsilon>0$ be given.
     \begin{enumerate}
         \item $\exist N_1 \in \N$ s,t. $\any n \in \N$, $n \geq N_1 \Rightarrow |x_n-l|<\epsilon$.
